// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parse ./index.js.flow 1`] = `
Object {
  "declarationsByName": Object {
    "A": Array [],
    "Array": Array [],
    "B": Array [],
    "C": Array [],
    "CurriedFn2": Array [
      Object {
        "kind": "TypeAlias",
        "leadingComments": Array [],
        "loc": SourceLocation {
          "end": Position {
            "column": 17,
            "line": 10,
          },
          "filename": "test-cases/curry/index.js.flow",
          "start": Position {
            "column": 0,
            "line": 8,
          },
        },
        "localName": "CurriedFn2",
        "right": Object {
          "kind": "IntersectionType",
          "loc": SourceLocation {
            "end": Position {
              "column": 16,
              "line": 10,
            },
            "filename": "test-cases/curry/index.js.flow",
            "start": Position {
              "column": 2,
              "line": 9,
            },
          },
          "types": Array [
            Object {
              "kind": "GenericApplicationType",
              "loc": SourceLocation {
                "end": Position {
                  "column": 21,
                  "line": 9,
                },
                "filename": "test-cases/curry/index.js.flow",
                "start": Position {
                  "column": 4,
                  "line": 9,
                },
              },
              "params": Array [
                Object {
                  "filename": "test-cases/curry/index.js.flow",
                  "kind": "ReferenceType",
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 9,
                      "line": 9,
                    },
                    "filename": "test-cases/curry/index.js.flow",
                    "start": Position {
                      "column": 8,
                      "line": 9,
                    },
                  },
                  "name": "A",
                },
                Object {
                  "kind": "GenericApplicationType",
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 20,
                      "line": 9,
                    },
                    "filename": "test-cases/curry/index.js.flow",
                    "start": Position {
                      "column": 11,
                      "line": 9,
                    },
                  },
                  "params": Array [
                    Object {
                      "filename": "test-cases/curry/index.js.flow",
                      "kind": "ReferenceType",
                      "loc": SourceLocation {
                        "end": Position {
                          "column": 16,
                          "line": 9,
                        },
                        "filename": "test-cases/curry/index.js.flow",
                        "start": Position {
                          "column": 15,
                          "line": 9,
                        },
                      },
                      "name": "B",
                    },
                    Object {
                      "filename": "test-cases/curry/index.js.flow",
                      "kind": "ReferenceType",
                      "loc": SourceLocation {
                        "end": Position {
                          "column": 19,
                          "line": 9,
                        },
                        "filename": "test-cases/curry/index.js.flow",
                        "start": Position {
                          "column": 18,
                          "line": 9,
                        },
                      },
                      "name": "C",
                    },
                  ],
                  "type": Object {
                    "filename": "test-cases/curry/index.js.flow",
                    "kind": "ReferenceType",
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 14,
                        "line": 9,
                      },
                      "filename": "test-cases/curry/index.js.flow",
                      "start": Position {
                        "column": 11,
                        "line": 9,
                      },
                    },
                    "name": "Fn1",
                  },
                },
              ],
              "type": Object {
                "filename": "test-cases/curry/index.js.flow",
                "kind": "ReferenceType",
                "loc": SourceLocation {
                  "end": Position {
                    "column": 7,
                    "line": 9,
                  },
                  "filename": "test-cases/curry/index.js.flow",
                  "start": Position {
                    "column": 4,
                    "line": 9,
                  },
                },
                "name": "Fn1",
              },
            },
            Object {
              "kind": "GenericApplicationType",
              "loc": SourceLocation {
                "end": Position {
                  "column": 16,
                  "line": 10,
                },
                "filename": "test-cases/curry/index.js.flow",
                "start": Position {
                  "column": 4,
                  "line": 10,
                },
              },
              "params": Array [
                Object {
                  "filename": "test-cases/curry/index.js.flow",
                  "kind": "ReferenceType",
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 9,
                      "line": 10,
                    },
                    "filename": "test-cases/curry/index.js.flow",
                    "start": Position {
                      "column": 8,
                      "line": 10,
                    },
                  },
                  "name": "A",
                },
                Object {
                  "filename": "test-cases/curry/index.js.flow",
                  "kind": "ReferenceType",
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 12,
                      "line": 10,
                    },
                    "filename": "test-cases/curry/index.js.flow",
                    "start": Position {
                      "column": 11,
                      "line": 10,
                    },
                  },
                  "name": "B",
                },
                Object {
                  "filename": "test-cases/curry/index.js.flow",
                  "kind": "ReferenceType",
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 15,
                      "line": 10,
                    },
                    "filename": "test-cases/curry/index.js.flow",
                    "start": Position {
                      "column": 14,
                      "line": 10,
                    },
                  },
                  "name": "C",
                },
              ],
              "type": Object {
                "filename": "test-cases/curry/index.js.flow",
                "kind": "ReferenceType",
                "loc": SourceLocation {
                  "end": Position {
                    "column": 7,
                    "line": 10,
                  },
                  "filename": "test-cases/curry/index.js.flow",
                  "start": Position {
                    "column": 4,
                    "line": 10,
                  },
                },
                "name": "Fn2",
              },
            },
          ],
        },
        "typeParameters": Array [
          Object {
            "name": "A",
            "variance": "invariant",
          },
          Object {
            "name": "B",
            "variance": "invariant",
          },
          Object {
            "name": "C",
            "variance": "invariant",
          },
        ],
      },
    ],
    "CurriedFn3": Array [
      Object {
        "kind": "TypeAlias",
        "leadingComments": Array [
          Object {
            "end": 400,
            "loc": SourceLocation {
              "end": Position {
                "column": 42,
                "line": 11,
              },
              "filename": "test-cases/curry/index.js.flow",
              "start": Position {
                "column": 0,
                "line": 11,
              },
            },
            "start": 358,
            "type": "CommentLine",
            "value": " eslint-disable-next-line no-unused-vars",
          },
        ],
        "loc": SourceLocation {
          "end": Position {
            "column": 20,
            "line": 15,
          },
          "filename": "test-cases/curry/index.js.flow",
          "start": Position {
            "column": 0,
            "line": 12,
          },
        },
        "localName": "CurriedFn3",
        "right": Object {
          "kind": "IntersectionType",
          "loc": SourceLocation {
            "end": Position {
              "column": 19,
              "line": 15,
            },
            "filename": "test-cases/curry/index.js.flow",
            "start": Position {
              "column": 2,
              "line": 13,
            },
          },
          "types": Array [
            Object {
              "kind": "GenericApplicationType",
              "loc": SourceLocation {
                "end": Position {
                  "column": 31,
                  "line": 13,
                },
                "filename": "test-cases/curry/index.js.flow",
                "start": Position {
                  "column": 4,
                  "line": 13,
                },
              },
              "params": Array [
                Object {
                  "filename": "test-cases/curry/index.js.flow",
                  "kind": "ReferenceType",
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 9,
                      "line": 13,
                    },
                    "filename": "test-cases/curry/index.js.flow",
                    "start": Position {
                      "column": 8,
                      "line": 13,
                    },
                  },
                  "name": "A",
                },
                Object {
                  "kind": "GenericApplicationType",
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 30,
                      "line": 13,
                    },
                    "filename": "test-cases/curry/index.js.flow",
                    "start": Position {
                      "column": 11,
                      "line": 13,
                    },
                  },
                  "params": Array [
                    Object {
                      "filename": "test-cases/curry/index.js.flow",
                      "kind": "ReferenceType",
                      "loc": SourceLocation {
                        "end": Position {
                          "column": 23,
                          "line": 13,
                        },
                        "filename": "test-cases/curry/index.js.flow",
                        "start": Position {
                          "column": 22,
                          "line": 13,
                        },
                      },
                      "name": "B",
                    },
                    Object {
                      "filename": "test-cases/curry/index.js.flow",
                      "kind": "ReferenceType",
                      "loc": SourceLocation {
                        "end": Position {
                          "column": 26,
                          "line": 13,
                        },
                        "filename": "test-cases/curry/index.js.flow",
                        "start": Position {
                          "column": 25,
                          "line": 13,
                        },
                      },
                      "name": "C",
                    },
                    Object {
                      "filename": "test-cases/curry/index.js.flow",
                      "kind": "ReferenceType",
                      "loc": SourceLocation {
                        "end": Position {
                          "column": 29,
                          "line": 13,
                        },
                        "filename": "test-cases/curry/index.js.flow",
                        "start": Position {
                          "column": 28,
                          "line": 13,
                        },
                      },
                      "name": "D",
                    },
                  ],
                  "type": Object {
                    "filename": "test-cases/curry/index.js.flow",
                    "kind": "ReferenceType",
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 21,
                        "line": 13,
                      },
                      "filename": "test-cases/curry/index.js.flow",
                      "start": Position {
                        "column": 11,
                        "line": 13,
                      },
                    },
                    "name": "CurriedFn2",
                  },
                },
              ],
              "type": Object {
                "filename": "test-cases/curry/index.js.flow",
                "kind": "ReferenceType",
                "loc": SourceLocation {
                  "end": Position {
                    "column": 7,
                    "line": 13,
                  },
                  "filename": "test-cases/curry/index.js.flow",
                  "start": Position {
                    "column": 4,
                    "line": 13,
                  },
                },
                "name": "Fn1",
              },
            },
            Object {
              "kind": "GenericApplicationType",
              "loc": SourceLocation {
                "end": Position {
                  "column": 24,
                  "line": 14,
                },
                "filename": "test-cases/curry/index.js.flow",
                "start": Position {
                  "column": 4,
                  "line": 14,
                },
              },
              "params": Array [
                Object {
                  "filename": "test-cases/curry/index.js.flow",
                  "kind": "ReferenceType",
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 9,
                      "line": 14,
                    },
                    "filename": "test-cases/curry/index.js.flow",
                    "start": Position {
                      "column": 8,
                      "line": 14,
                    },
                  },
                  "name": "A",
                },
                Object {
                  "filename": "test-cases/curry/index.js.flow",
                  "kind": "ReferenceType",
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 12,
                      "line": 14,
                    },
                    "filename": "test-cases/curry/index.js.flow",
                    "start": Position {
                      "column": 11,
                      "line": 14,
                    },
                  },
                  "name": "B",
                },
                Object {
                  "kind": "GenericApplicationType",
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 23,
                      "line": 14,
                    },
                    "filename": "test-cases/curry/index.js.flow",
                    "start": Position {
                      "column": 14,
                      "line": 14,
                    },
                  },
                  "params": Array [
                    Object {
                      "filename": "test-cases/curry/index.js.flow",
                      "kind": "ReferenceType",
                      "loc": SourceLocation {
                        "end": Position {
                          "column": 19,
                          "line": 14,
                        },
                        "filename": "test-cases/curry/index.js.flow",
                        "start": Position {
                          "column": 18,
                          "line": 14,
                        },
                      },
                      "name": "C",
                    },
                    Object {
                      "filename": "test-cases/curry/index.js.flow",
                      "kind": "ReferenceType",
                      "loc": SourceLocation {
                        "end": Position {
                          "column": 22,
                          "line": 14,
                        },
                        "filename": "test-cases/curry/index.js.flow",
                        "start": Position {
                          "column": 21,
                          "line": 14,
                        },
                      },
                      "name": "D",
                    },
                  ],
                  "type": Object {
                    "filename": "test-cases/curry/index.js.flow",
                    "kind": "ReferenceType",
                    "loc": SourceLocation {
                      "end": Position {
                        "column": 17,
                        "line": 14,
                      },
                      "filename": "test-cases/curry/index.js.flow",
                      "start": Position {
                        "column": 14,
                        "line": 14,
                      },
                    },
                    "name": "Fn1",
                  },
                },
              ],
              "type": Object {
                "filename": "test-cases/curry/index.js.flow",
                "kind": "ReferenceType",
                "loc": SourceLocation {
                  "end": Position {
                    "column": 7,
                    "line": 14,
                  },
                  "filename": "test-cases/curry/index.js.flow",
                  "start": Position {
                    "column": 4,
                    "line": 14,
                  },
                },
                "name": "Fn2",
              },
            },
            Object {
              "kind": "GenericApplicationType",
              "loc": SourceLocation {
                "end": Position {
                  "column": 19,
                  "line": 15,
                },
                "filename": "test-cases/curry/index.js.flow",
                "start": Position {
                  "column": 4,
                  "line": 15,
                },
              },
              "params": Array [
                Object {
                  "filename": "test-cases/curry/index.js.flow",
                  "kind": "ReferenceType",
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 9,
                      "line": 15,
                    },
                    "filename": "test-cases/curry/index.js.flow",
                    "start": Position {
                      "column": 8,
                      "line": 15,
                    },
                  },
                  "name": "A",
                },
                Object {
                  "filename": "test-cases/curry/index.js.flow",
                  "kind": "ReferenceType",
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 12,
                      "line": 15,
                    },
                    "filename": "test-cases/curry/index.js.flow",
                    "start": Position {
                      "column": 11,
                      "line": 15,
                    },
                  },
                  "name": "B",
                },
                Object {
                  "filename": "test-cases/curry/index.js.flow",
                  "kind": "ReferenceType",
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 15,
                      "line": 15,
                    },
                    "filename": "test-cases/curry/index.js.flow",
                    "start": Position {
                      "column": 14,
                      "line": 15,
                    },
                  },
                  "name": "C",
                },
                Object {
                  "filename": "test-cases/curry/index.js.flow",
                  "kind": "ReferenceType",
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 18,
                      "line": 15,
                    },
                    "filename": "test-cases/curry/index.js.flow",
                    "start": Position {
                      "column": 17,
                      "line": 15,
                    },
                  },
                  "name": "D",
                },
              ],
              "type": Object {
                "filename": "test-cases/curry/index.js.flow",
                "kind": "ReferenceType",
                "loc": SourceLocation {
                  "end": Position {
                    "column": 7,
                    "line": 15,
                  },
                  "filename": "test-cases/curry/index.js.flow",
                  "start": Position {
                    "column": 4,
                    "line": 15,
                  },
                },
                "name": "Fn3",
              },
            },
          ],
        },
        "typeParameters": Array [
          Object {
            "name": "A",
            "variance": "invariant",
          },
          Object {
            "name": "B",
            "variance": "invariant",
          },
          Object {
            "name": "C",
            "variance": "invariant",
          },
          Object {
            "name": "D",
            "variance": "invariant",
          },
        ],
      },
    ],
    "D": Array [],
    "Fn1": Array [
      Object {
        "kind": "TypeAlias",
        "leadingComments": Array [
          Object {
            "end": 8,
            "loc": SourceLocation {
              "end": Position {
                "column": 8,
                "line": 1,
              },
              "filename": "test-cases/curry/index.js.flow",
              "start": Position {
                "column": 0,
                "line": 1,
              },
            },
            "start": 0,
            "type": "CommentLine",
            "value": " @flow",
          },
          Object {
            "end": 106,
            "loc": SourceLocation {
              "end": Position {
                "column": 96,
                "line": 3,
              },
              "filename": "test-cases/curry/index.js.flow",
              "start": Position {
                "column": 0,
                "line": 3,
              },
            },
            "start": 10,
            "type": "CommentLine",
            "value": " Type definitions taken from https://github.com/gcanti/flow-static-land/blob/master/src/Fun.js",
          },
        ],
        "loc": SourceLocation {
          "end": Position {
            "column": 51,
            "line": 4,
          },
          "filename": "test-cases/curry/index.js.flow",
          "start": Position {
            "column": 0,
            "line": 4,
          },
        },
        "localName": "Fn1",
        "right": Object {
          "kind": "FunctionType",
          "loc": SourceLocation {
            "end": Position {
              "column": 50,
              "line": 4,
            },
            "filename": "test-cases/curry/index.js.flow",
            "start": Position {
              "column": 17,
              "line": 4,
            },
          },
          "params": Array [
            Object {
              "name": "a",
              "optional": false,
              "type": Object {
                "filename": "test-cases/curry/index.js.flow",
                "kind": "ReferenceType",
                "loc": SourceLocation {
                  "end": Position {
                    "column": 22,
                    "line": 4,
                  },
                  "filename": "test-cases/curry/index.js.flow",
                  "start": Position {
                    "column": 21,
                    "line": 4,
                  },
                },
                "name": "A",
              },
            },
          ],
          "restParam": Object {
            "name": "rest",
            "optional": false,
            "type": Object {
              "kind": "GenericApplicationType",
              "loc": SourceLocation {
                "end": Position {
                  "column": 44,
                  "line": 4,
                },
                "filename": "test-cases/curry/index.js.flow",
                "start": Position {
                  "column": 33,
                  "line": 4,
                },
              },
              "params": Array [
                Object {
                  "kind": "VoidType",
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 43,
                      "line": 4,
                    },
                    "filename": "test-cases/curry/index.js.flow",
                    "start": Position {
                      "column": 39,
                      "line": 4,
                    },
                  },
                },
              ],
              "type": Object {
                "filename": "test-cases/curry/index.js.flow",
                "kind": "ReferenceType",
                "loc": SourceLocation {
                  "end": Position {
                    "column": 38,
                    "line": 4,
                  },
                  "filename": "test-cases/curry/index.js.flow",
                  "start": Position {
                    "column": 33,
                    "line": 4,
                  },
                },
                "name": "Array",
              },
            },
          },
          "returnType": Object {
            "filename": "test-cases/curry/index.js.flow",
            "kind": "ReferenceType",
            "loc": SourceLocation {
              "end": Position {
                "column": 50,
                "line": 4,
              },
              "filename": "test-cases/curry/index.js.flow",
              "start": Position {
                "column": 49,
                "line": 4,
              },
            },
            "name": "B",
          },
          "typeParameters": Array [],
        },
        "typeParameters": Array [
          Object {
            "name": "A",
            "variance": "invariant",
          },
          Object {
            "name": "B",
            "variance": "invariant",
          },
        ],
      },
    ],
    "Fn2": Array [
      Object {
        "kind": "TypeAlias",
        "leadingComments": Array [],
        "loc": SourceLocation {
          "end": Position {
            "column": 60,
            "line": 5,
          },
          "filename": "test-cases/curry/index.js.flow",
          "start": Position {
            "column": 0,
            "line": 5,
          },
        },
        "localName": "Fn2",
        "right": Object {
          "kind": "FunctionType",
          "loc": SourceLocation {
            "end": Position {
              "column": 59,
              "line": 5,
            },
            "filename": "test-cases/curry/index.js.flow",
            "start": Position {
              "column": 20,
              "line": 5,
            },
          },
          "params": Array [
            Object {
              "name": "a",
              "optional": false,
              "type": Object {
                "filename": "test-cases/curry/index.js.flow",
                "kind": "ReferenceType",
                "loc": SourceLocation {
                  "end": Position {
                    "column": 25,
                    "line": 5,
                  },
                  "filename": "test-cases/curry/index.js.flow",
                  "start": Position {
                    "column": 24,
                    "line": 5,
                  },
                },
                "name": "A",
              },
            },
            Object {
              "name": "b",
              "optional": false,
              "type": Object {
                "filename": "test-cases/curry/index.js.flow",
                "kind": "ReferenceType",
                "loc": SourceLocation {
                  "end": Position {
                    "column": 31,
                    "line": 5,
                  },
                  "filename": "test-cases/curry/index.js.flow",
                  "start": Position {
                    "column": 30,
                    "line": 5,
                  },
                },
                "name": "B",
              },
            },
          ],
          "restParam": Object {
            "name": "rest",
            "optional": false,
            "type": Object {
              "kind": "GenericApplicationType",
              "loc": SourceLocation {
                "end": Position {
                  "column": 53,
                  "line": 5,
                },
                "filename": "test-cases/curry/index.js.flow",
                "start": Position {
                  "column": 42,
                  "line": 5,
                },
              },
              "params": Array [
                Object {
                  "kind": "VoidType",
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 52,
                      "line": 5,
                    },
                    "filename": "test-cases/curry/index.js.flow",
                    "start": Position {
                      "column": 48,
                      "line": 5,
                    },
                  },
                },
              ],
              "type": Object {
                "filename": "test-cases/curry/index.js.flow",
                "kind": "ReferenceType",
                "loc": SourceLocation {
                  "end": Position {
                    "column": 47,
                    "line": 5,
                  },
                  "filename": "test-cases/curry/index.js.flow",
                  "start": Position {
                    "column": 42,
                    "line": 5,
                  },
                },
                "name": "Array",
              },
            },
          },
          "returnType": Object {
            "filename": "test-cases/curry/index.js.flow",
            "kind": "ReferenceType",
            "loc": SourceLocation {
              "end": Position {
                "column": 59,
                "line": 5,
              },
              "filename": "test-cases/curry/index.js.flow",
              "start": Position {
                "column": 58,
                "line": 5,
              },
            },
            "name": "C",
          },
          "typeParameters": Array [],
        },
        "typeParameters": Array [
          Object {
            "name": "A",
            "variance": "invariant",
          },
          Object {
            "name": "B",
            "variance": "invariant",
          },
          Object {
            "name": "C",
            "variance": "invariant",
          },
        ],
      },
    ],
    "Fn3": Array [
      Object {
        "kind": "TypeAlias",
        "leadingComments": Array [],
        "loc": SourceLocation {
          "end": Position {
            "column": 69,
            "line": 6,
          },
          "filename": "test-cases/curry/index.js.flow",
          "start": Position {
            "column": 0,
            "line": 6,
          },
        },
        "localName": "Fn3",
        "right": Object {
          "kind": "FunctionType",
          "loc": SourceLocation {
            "end": Position {
              "column": 68,
              "line": 6,
            },
            "filename": "test-cases/curry/index.js.flow",
            "start": Position {
              "column": 23,
              "line": 6,
            },
          },
          "params": Array [
            Object {
              "name": "a",
              "optional": false,
              "type": Object {
                "filename": "test-cases/curry/index.js.flow",
                "kind": "ReferenceType",
                "loc": SourceLocation {
                  "end": Position {
                    "column": 28,
                    "line": 6,
                  },
                  "filename": "test-cases/curry/index.js.flow",
                  "start": Position {
                    "column": 27,
                    "line": 6,
                  },
                },
                "name": "A",
              },
            },
            Object {
              "name": "b",
              "optional": false,
              "type": Object {
                "filename": "test-cases/curry/index.js.flow",
                "kind": "ReferenceType",
                "loc": SourceLocation {
                  "end": Position {
                    "column": 34,
                    "line": 6,
                  },
                  "filename": "test-cases/curry/index.js.flow",
                  "start": Position {
                    "column": 33,
                    "line": 6,
                  },
                },
                "name": "B",
              },
            },
            Object {
              "name": "c",
              "optional": false,
              "type": Object {
                "filename": "test-cases/curry/index.js.flow",
                "kind": "ReferenceType",
                "loc": SourceLocation {
                  "end": Position {
                    "column": 40,
                    "line": 6,
                  },
                  "filename": "test-cases/curry/index.js.flow",
                  "start": Position {
                    "column": 39,
                    "line": 6,
                  },
                },
                "name": "C",
              },
            },
          ],
          "restParam": Object {
            "name": "rest",
            "optional": false,
            "type": Object {
              "kind": "GenericApplicationType",
              "loc": SourceLocation {
                "end": Position {
                  "column": 62,
                  "line": 6,
                },
                "filename": "test-cases/curry/index.js.flow",
                "start": Position {
                  "column": 51,
                  "line": 6,
                },
              },
              "params": Array [
                Object {
                  "kind": "VoidType",
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 61,
                      "line": 6,
                    },
                    "filename": "test-cases/curry/index.js.flow",
                    "start": Position {
                      "column": 57,
                      "line": 6,
                    },
                  },
                },
              ],
              "type": Object {
                "filename": "test-cases/curry/index.js.flow",
                "kind": "ReferenceType",
                "loc": SourceLocation {
                  "end": Position {
                    "column": 56,
                    "line": 6,
                  },
                  "filename": "test-cases/curry/index.js.flow",
                  "start": Position {
                    "column": 51,
                    "line": 6,
                  },
                },
                "name": "Array",
              },
            },
          },
          "returnType": Object {
            "filename": "test-cases/curry/index.js.flow",
            "kind": "ReferenceType",
            "loc": SourceLocation {
              "end": Position {
                "column": 68,
                "line": 6,
              },
              "filename": "test-cases/curry/index.js.flow",
              "start": Position {
                "column": 67,
                "line": 6,
              },
            },
            "name": "D",
          },
          "typeParameters": Array [],
        },
        "typeParameters": Array [
          Object {
            "name": "A",
            "variance": "invariant",
          },
          Object {
            "name": "B",
            "variance": "invariant",
          },
          Object {
            "name": "C",
            "variance": "invariant",
          },
          Object {
            "name": "D",
            "variance": "invariant",
          },
        ],
      },
    ],
    "add": Array [
      Object {
        "kind": "VariableDeclaration",
        "leadingComments": Array [],
        "loc": SourceLocation {
          "end": Position {
            "column": 16,
            "line": 33,
          },
          "filename": "test-cases/curry/index.js.flow",
          "start": Position {
            "column": 13,
            "line": 33,
          },
        },
        "localName": "add",
        "mode": "const",
        "typeAnnotation": Object {
          "kind": "GenericApplicationType",
          "loc": SourceLocation {
            "end": Position {
              "column": 69,
              "line": 18,
            },
            "filename": "test-cases/curry/index.js.flow",
            "start": Position {
              "column": 50,
              "line": 18,
            },
          },
          "params": Array [
            Object {
              "kind": "NumberType",
              "loc": SourceLocation {
                "end": Position {
                  "column": 35,
                  "line": 33,
                },
                "filename": "test-cases/curry/index.js.flow",
                "start": Position {
                  "column": 29,
                  "line": 33,
                },
              },
            },
            Object {
              "kind": "NumberType",
              "loc": SourceLocation {
                "end": Position {
                  "column": 46,
                  "line": 33,
                },
                "filename": "test-cases/curry/index.js.flow",
                "start": Position {
                  "column": 40,
                  "line": 33,
                },
              },
            },
            Object {
              "kind": "NumberType",
              "loc": SourceLocation {
                "end": Position {
                  "column": 55,
                  "line": 33,
                },
                "filename": "test-cases/curry/index.js.flow",
                "start": Position {
                  "column": 49,
                  "line": 33,
                },
              },
            },
          ],
          "type": Object {
            "filename": "test-cases/curry/index.js.flow",
            "kind": "ReferenceType",
            "loc": SourceLocation {
              "end": Position {
                "column": 60,
                "line": 18,
              },
              "filename": "test-cases/curry/index.js.flow",
              "start": Position {
                "column": 50,
                "line": 18,
              },
            },
            "name": "CurriedFn2",
          },
        },
      },
    ],
    "curry": Array [
      Object {
        "kind": "FunctionDeclaration",
        "leadingComments": Array [
          Object {
            "type": "LineComment",
            "value": " eslint-disable-next-line no-unused-vars",
          },
        ],
        "loc": SourceLocation {
          "end": Position {
            "column": 70,
            "line": 18,
          },
          "filename": "test-cases/curry/index.js.flow",
          "start": Position {
            "column": 0,
            "line": 18,
          },
        },
        "localName": "curry",
        "params": Array [
          Object {
            "name": "f",
            "optional": false,
            "type": Object {
              "kind": "GenericApplicationType",
              "loc": SourceLocation {
                "end": Position {
                  "column": 47,
                  "line": 18,
                },
                "filename": "test-cases/curry/index.js.flow",
                "start": Position {
                  "column": 35,
                  "line": 18,
                },
              },
              "params": Array [
                Object {
                  "filename": "test-cases/curry/index.js.flow",
                  "kind": "ReferenceType",
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 40,
                      "line": 18,
                    },
                    "filename": "test-cases/curry/index.js.flow",
                    "start": Position {
                      "column": 39,
                      "line": 18,
                    },
                  },
                  "name": "A",
                },
                Object {
                  "filename": "test-cases/curry/index.js.flow",
                  "kind": "ReferenceType",
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 43,
                      "line": 18,
                    },
                    "filename": "test-cases/curry/index.js.flow",
                    "start": Position {
                      "column": 42,
                      "line": 18,
                    },
                  },
                  "name": "B",
                },
                Object {
                  "filename": "test-cases/curry/index.js.flow",
                  "kind": "ReferenceType",
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 46,
                      "line": 18,
                    },
                    "filename": "test-cases/curry/index.js.flow",
                    "start": Position {
                      "column": 45,
                      "line": 18,
                    },
                  },
                  "name": "C",
                },
              ],
              "type": Object {
                "filename": "test-cases/curry/index.js.flow",
                "kind": "ReferenceType",
                "loc": SourceLocation {
                  "end": Position {
                    "column": 38,
                    "line": 18,
                  },
                  "filename": "test-cases/curry/index.js.flow",
                  "start": Position {
                    "column": 35,
                    "line": 18,
                  },
                },
                "name": "Fn2",
              },
            },
          },
        ],
        "restParam": undefined,
        "returnType": Object {
          "kind": "GenericApplicationType",
          "loc": SourceLocation {
            "end": Position {
              "column": 69,
              "line": 18,
            },
            "filename": "test-cases/curry/index.js.flow",
            "start": Position {
              "column": 50,
              "line": 18,
            },
          },
          "params": Array [
            Object {
              "filename": "test-cases/curry/index.js.flow",
              "kind": "ReferenceType",
              "loc": SourceLocation {
                "end": Position {
                  "column": 62,
                  "line": 18,
                },
                "filename": "test-cases/curry/index.js.flow",
                "start": Position {
                  "column": 61,
                  "line": 18,
                },
              },
              "name": "A",
            },
            Object {
              "filename": "test-cases/curry/index.js.flow",
              "kind": "ReferenceType",
              "loc": SourceLocation {
                "end": Position {
                  "column": 65,
                  "line": 18,
                },
                "filename": "test-cases/curry/index.js.flow",
                "start": Position {
                  "column": 64,
                  "line": 18,
                },
              },
              "name": "B",
            },
            Object {
              "filename": "test-cases/curry/index.js.flow",
              "kind": "ReferenceType",
              "loc": SourceLocation {
                "end": Position {
                  "column": 68,
                  "line": 18,
                },
                "filename": "test-cases/curry/index.js.flow",
                "start": Position {
                  "column": 67,
                  "line": 18,
                },
              },
              "name": "C",
            },
          ],
          "type": Object {
            "filename": "test-cases/curry/index.js.flow",
            "kind": "ReferenceType",
            "loc": SourceLocation {
              "end": Position {
                "column": 60,
                "line": 18,
              },
              "filename": "test-cases/curry/index.js.flow",
              "start": Position {
                "column": 50,
                "line": 18,
              },
            },
            "name": "CurriedFn2",
          },
        },
        "typeParameters": Array [
          Object {
            "name": "A",
            "variance": "invariant",
          },
          Object {
            "name": "B",
            "variance": "invariant",
          },
          Object {
            "name": "C",
            "variance": "invariant",
          },
        ],
      },
      Object {
        "kind": "FunctionDeclaration",
        "leadingComments": Array [
          Object {
            "type": "LineComment",
            "value": " eslint-disable-next-line no-redeclare",
          },
        ],
        "loc": SourceLocation {
          "end": Position {
            "column": 79,
            "line": 20,
          },
          "filename": "test-cases/curry/index.js.flow",
          "start": Position {
            "column": 0,
            "line": 20,
          },
        },
        "localName": "curry",
        "params": Array [
          Object {
            "name": "f",
            "optional": false,
            "type": Object {
              "kind": "GenericApplicationType",
              "loc": SourceLocation {
                "end": Position {
                  "column": 53,
                  "line": 20,
                },
                "filename": "test-cases/curry/index.js.flow",
                "start": Position {
                  "column": 38,
                  "line": 20,
                },
              },
              "params": Array [
                Object {
                  "filename": "test-cases/curry/index.js.flow",
                  "kind": "ReferenceType",
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 43,
                      "line": 20,
                    },
                    "filename": "test-cases/curry/index.js.flow",
                    "start": Position {
                      "column": 42,
                      "line": 20,
                    },
                  },
                  "name": "A",
                },
                Object {
                  "filename": "test-cases/curry/index.js.flow",
                  "kind": "ReferenceType",
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 46,
                      "line": 20,
                    },
                    "filename": "test-cases/curry/index.js.flow",
                    "start": Position {
                      "column": 45,
                      "line": 20,
                    },
                  },
                  "name": "B",
                },
                Object {
                  "filename": "test-cases/curry/index.js.flow",
                  "kind": "ReferenceType",
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 49,
                      "line": 20,
                    },
                    "filename": "test-cases/curry/index.js.flow",
                    "start": Position {
                      "column": 48,
                      "line": 20,
                    },
                  },
                  "name": "C",
                },
                Object {
                  "filename": "test-cases/curry/index.js.flow",
                  "kind": "ReferenceType",
                  "loc": SourceLocation {
                    "end": Position {
                      "column": 52,
                      "line": 20,
                    },
                    "filename": "test-cases/curry/index.js.flow",
                    "start": Position {
                      "column": 51,
                      "line": 20,
                    },
                  },
                  "name": "D",
                },
              ],
              "type": Object {
                "filename": "test-cases/curry/index.js.flow",
                "kind": "ReferenceType",
                "loc": SourceLocation {
                  "end": Position {
                    "column": 41,
                    "line": 20,
                  },
                  "filename": "test-cases/curry/index.js.flow",
                  "start": Position {
                    "column": 38,
                    "line": 20,
                  },
                },
                "name": "Fn3",
              },
            },
          },
        ],
        "restParam": undefined,
        "returnType": Object {
          "kind": "GenericApplicationType",
          "loc": SourceLocation {
            "end": Position {
              "column": 78,
              "line": 20,
            },
            "filename": "test-cases/curry/index.js.flow",
            "start": Position {
              "column": 56,
              "line": 20,
            },
          },
          "params": Array [
            Object {
              "filename": "test-cases/curry/index.js.flow",
              "kind": "ReferenceType",
              "loc": SourceLocation {
                "end": Position {
                  "column": 68,
                  "line": 20,
                },
                "filename": "test-cases/curry/index.js.flow",
                "start": Position {
                  "column": 67,
                  "line": 20,
                },
              },
              "name": "A",
            },
            Object {
              "filename": "test-cases/curry/index.js.flow",
              "kind": "ReferenceType",
              "loc": SourceLocation {
                "end": Position {
                  "column": 71,
                  "line": 20,
                },
                "filename": "test-cases/curry/index.js.flow",
                "start": Position {
                  "column": 70,
                  "line": 20,
                },
              },
              "name": "B",
            },
            Object {
              "filename": "test-cases/curry/index.js.flow",
              "kind": "ReferenceType",
              "loc": SourceLocation {
                "end": Position {
                  "column": 74,
                  "line": 20,
                },
                "filename": "test-cases/curry/index.js.flow",
                "start": Position {
                  "column": 73,
                  "line": 20,
                },
              },
              "name": "C",
            },
            Object {
              "filename": "test-cases/curry/index.js.flow",
              "kind": "ReferenceType",
              "loc": SourceLocation {
                "end": Position {
                  "column": 77,
                  "line": 20,
                },
                "filename": "test-cases/curry/index.js.flow",
                "start": Position {
                  "column": 76,
                  "line": 20,
                },
              },
              "name": "D",
            },
          ],
          "type": Object {
            "filename": "test-cases/curry/index.js.flow",
            "kind": "ReferenceType",
            "loc": SourceLocation {
              "end": Position {
                "column": 66,
                "line": 20,
              },
              "filename": "test-cases/curry/index.js.flow",
              "start": Position {
                "column": 56,
                "line": 20,
              },
            },
            "name": "CurriedFn3",
          },
        },
        "typeParameters": Array [
          Object {
            "name": "A",
            "variance": "invariant",
          },
          Object {
            "name": "B",
            "variance": "invariant",
          },
          Object {
            "name": "C",
            "variance": "invariant",
          },
          Object {
            "name": "D",
            "variance": "invariant",
          },
        ],
      },
    ],
  },
  "exportStatements": Array [
    Object {
      "kind": "DefaultExportStatement",
      "localName": "curry",
    },
    Object {
      "exportedName": "add",
      "kind": "NamedExportStatement",
      "localName": "add",
    },
  ],
}
`;

exports[`print ./index.d.ts 1`] = `
"type Fn2<A, B, C> = (a: A, b: B, ...rest: Array<void>) => C;
type Fn1<A, B> = (a: A, ...rest: Array<void>) => B;
type CurriedFn2<A, B, C> = Fn1<A, Fn1<B, C>> & Fn2<A, B, C>;
declare function curry<A, B, C>(f: Fn2<A, B, C>): CurriedFn2<A, B, C>;
type Fn3<A, B, C, D> = (a: A, b: B, c: C, ...rest: Array<void>) => D;
type CurriedFn3<A, B, C, D> = Fn1<A, CurriedFn2<B, C, D>> & Fn2<A, B, Fn1<C, D>> & Fn3<A, B, C, D>;
declare function curry<A, B, C, D>(f: Fn3<A, B, C, D>): CurriedFn3<A, B, C, D>;
declare const add: CurriedFn2<number, number, number>;
export default curry;
export {add};"
`;

exports[`print ./index.js.flow 1`] = `
"// @flow

type Fn2<A, B, C> = (a: A, b: B, ...rest: Array<void>) => C;
type Fn1<A, B> = (a: A, ...rest: Array<void>) => B;
type CurriedFn2<A, B, C> = Fn1<A, Fn1<B, C>> & Fn2<A, B, C>;
declare function curry<A, B, C>(f: Fn2<A, B, C>): CurriedFn2<A, B, C>;
type Fn3<A, B, C, D> = (a: A, b: B, c: C, ...rest: Array<void>) => D;
type CurriedFn3<A, B, C, D> = Fn1<A, CurriedFn2<B, C, D>> & Fn2<A, B, Fn1<C, D>> & Fn3<A, B, C, D>;
declare function curry<A, B, C, D>(f: Fn3<A, B, C, D>): CurriedFn3<A, B, C, D>;
declare var add: CurriedFn2<number, number, number>;
export default curry;
export {add};"
`;
